@@ -251,6 +251,7 @@ Included
 - Launchpad History now includes an inline details pane for selected rows showing adapter class/id/mode/source/reasons and capability counts without leaving Launchpad.
 - Launchpad History actions now include `Open Run` and `Open Evidence` for selected rows, opening latest run and `analysis` artifact folders directly.
 - Launchpad History now falls back to newest `run_*` folder detection when `view_state.json` is missing or stale, so report/evidence actions still work on older libraries.
+- Launchpad History fallback now also reads `report_card_v0.json`/`report_card.txt` to recover status/buckets/baseline when view-state metadata is incomplete.
 - Launchpad History now includes `Copy Details` to copy selected inline evidence summary text for ticket/share workflows.
 - Launchpad History now supports keyboard copy (`Ctrl+C`) from history list/details pane for faster evidence sharing.
 - Ticket-pack regression coverage now enforces inclusion of adapter evidence artifacts (`analysis/capability_ledger_v0.json`, `analysis/adapter_summary_v0.json`, `analysis/adapter_findings_v0.json`) when present in run output.
